--- a/openstack/roles/environment/templates/hosts.j2
+++ b/openstack/roles/environment/templates/hosts.j2
@@ -6,7 +6,7 @@ ff02::1 ip6-allnodes
 ff02::2 ip6-allrouters
 
 # controller
-192.168.70.11 controller
+{{ cont_ip }} controller
 
 # compute
-192.168.70.12 compute
+{{ comp_ip }} compute
