too few arguments

--- a/openstack/roles/keystone/templates/project.sh.j2
+++ b/openstack/roles/keystone/templates/project.sh.j2
@@ -1,6 +1,7 @@
 #!/bin/bash
 openstack project delete admin &&
+openstack role delete admin &&
 openstack project create --domain default --description "Admin Project" admin &&
-openstack user create --domain default --password={{ openstack_admin_pass }} &&
+openstack user create --domain default --password={{ openstack_admin_pass }} admin &&
 openstack role create admin &&
 openstack role add --project admin --user admin admin
